--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@ pubish = "public"
 command = "hugo --minify"
 
 [context.production.environment]
-HUGO_VERSION = "0.51.0"
+HUGO_VERSION = "latest"
 HUGO_ENV = "production"
 HUGO_ENABLEGITINFO = "true"
 
