--- a/config.toml
+++ b/config.toml
@@ -34,21 +34,15 @@ canonifyurls = true
   parent= "SCD Hub"
 
 [[menu.main]]
-  name = "Partnering "
+  name = "Partner"
   url = "/about/#partner"
   weight = 23
   parent= "SCD Hub"
 
 [[menu.main]]
-  name = "Non-profit Status"
+  name = "Non-profit"
   url = "/about/#501c3"
   weight = 23
-  parent= "SCD Hub"
-
-[[menu.main]]
-  name = "Membership"
-  url = "/members"
-  weight = 24
   parent= "SCD Hub"
 
 [[menu.main]]
@@ -62,41 +56,6 @@ canonifyurls = true
   url = "/donate"
   weight = 26
   parent= "SCD Hub"
-
-[[menu.main]]
-  name = "Drinking Water"
-  url = "/cat/water"
-  weight = 27
-
-[[menu.main]]
-  name = "Water Sources"
-  url = "/cat/water-sources/"
-  weight = 28
-  parent = "Drinking Water"
-
-[[menu.main]]
-  name = "Water Procurement"
-  url = "/cat/procurement"
-  weight = 29
-  parent = "Drinking Water"
-
-[[menu.main]]
-  name = "Water Storage"
-  url = "/cat/water-storage/"
-  weight = 30
-  parent = "Drinking Water"
-
-[[menu.main]]
-  name = "Water Treatment"
-  url = "/cat/water-treatment/"
-  weight = 31
-  parent = "Drinking Water"
-
-[[menu.main]]
-  name = "Water Distribution"
-  url = "/cat/simple-water-distribution/"
-  weight = 32
-  parent = "Drinking Water"
 
 [[menu.main]]
   name = "Solid Waste Storage"
@@ -148,7 +107,7 @@ canonifyurls = true
 
 [[menu.main]]
   name = "Shelter"
-  url = "/cat/water"
+  url = "/cat/shelter"
   weight = 45
 
 [[menu.main]]
@@ -159,12 +118,12 @@ canonifyurls = true
 
 [[menu.main]]
   name = "Structures"
-  url = "/cat/procurement"
+  url = "/cat/structures"
   weight = 47
-  parent = "Drinking Water"
+  parent = "Shelter"
 
 [[menu.main]]
-  name = "Clinic Topics"
+  name = "Clinics"
   url = "/videos/2017/07/start-a-clinic/index.html/"
   weight = 49
 
@@ -172,37 +131,72 @@ canonifyurls = true
   name = "Water Systems"
   url = "/clinic/peacewaters_clinic"
   weight = 51
-  parent = "Clinic Topics"
+  parent = "Clinics"
 
 [[menu.main]]
   name = "Energy"
   url = "/clinic/renewables"
   weight = 52
-  parent = "Clinic Topics"
+  parent = "Clinics"
 
 [[menu.main]]
   name = "Telecommunications"
   url = "/clinic/renewables"
   weight = 35
-  parent = "Clinic Topics"
+  parent = "Clinics"
 
 [[menu.main]]
   name = "Shelter"
   url = "/cat/shelter"
   weight = 53
-  parent = "Clinic Topics"
+  parent = "Clinics"
 
 [[menu.main]]
   name = "Food Security"
   url = "/cat/food"
   weight = 54
-  parent = "Clinic Topics"
+  parent = "Clinics"
 
 [[menu.main]]
   name = "IT"
   url = "/clinic/information-technology"
   weight = 55
-  parent = "Clinic Topics"
+  parent = "Clinics"
+
+[[menu.main]]
+  name = "Drinking Water"
+  url = "/cat/water"
+  weight = 127
+
+[[menu.main]]
+  name = "Water Sources"
+  url = "/cat/water-sources/"
+  weight = 128
+  parent = "Drinking Water"
+
+[[menu.main]]
+  name = "Water Procurement"
+  url = "/cat/procurement"
+  weight = 129
+  parent = "Drinking Water"
+
+[[menu.main]]
+  name = "Water Storage"
+  url = "/cat/water-storage/"
+  weight = 130
+  parent = "Drinking Water"
+
+[[menu.main]]
+  name = "Water Treatment"
+  url = "/cat/water-treatment/"
+  weight = 131
+  parent = "Drinking Water"
+
+[[menu.main]]
+  name = "Water Distribution"
+  url = "/cat/simple-water-distribution/"
+  weight = 32
+  parent = "Drinking Water"
 
 [params]
     amp = true
