--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,7 @@ theme = "amp"
 [taxonomies]
   cat = "cat"
   tag = "tag"
+  Youtubeid = "youtubeid"
   clinic = "clinic"
 
 LanguageCode= "en-EN"
@@ -201,14 +202,14 @@ canonifyurls = true
 [params]
     amp = true
     # define which amp-elements you are using globally, these elements will be included in every page
-    ampElements = ["amp-accordion","amp-ad","amp-analytics","amp-carousel","amp-iframe","amp-app-banner","amp-dynamic-css-classes","amp-form","amp-fx-flying-carpet","amp-image-lightbox","amp-lightbox","amp-sidebar","amp-social-share","amp-sticky-ad","amp-user-notification"]
+    ampElements = ["amp-accordion","amp-ad","amp-analytics","amp-carousel","amp-iframe","amp-app-banner","amp-dynamic-css-classes","amp-youtube","amp-form","amp-fx-flying-carpet","amp-image-lightbox","amp-lightbox","amp-sidebar","amp-social-share","amp-sticky-ad","amp-user-notification"]
   description = "SCD Hub"
   metadescription = "Library of Sustainable Community Development solutions and approaches"
   cover = "images/n0.jpg"
   catcover = "images/n0.jpg"
   author = "Greg Willson"
   authorlocation = "Nederland, Colorado, USA"
-  authorwebsite = "http://scdhub.org/greg"
+  authorwebsite = "http://scdhub.org/"
   authorbio= "About SCD Hub"
   logo = "images/logo0.svg"
   # googleAnalyticsUserID = "UA-79101-12"
@@ -217,7 +218,7 @@ canonifyurls = true
   githubName = "sustainablecommunitydevelopmenthub"
   twitterName = "scdhub"
   facebookName = "SCD Hub"
-  # codepenName = "biomassives"
+  codepenName = "biomassives"
   linkedinName = "acmeideal@gmail.com"
   # stackoverflowId = ""
   # keybaseName = ""
